--- a/sources/config-sans-syriac-eastern.yaml
+++ b/sources/config-sans-syriac-eastern.yaml
@@ -1,8 +1,8 @@
 buildVariable: false
-familyName: Noto Sans Syriac-Thin
+familyName: Noto Sans Syriac Eastern
 googleFonts: true
 includeSubsets:
 - from: Noto Sans
   name: GF_Latin_Core
 sources:
-- NotoSansSyriac-Thin.glyphs
+- NotoSansSyriac-Eastern.glyphs
