--- a/sources/config-sans-syriac.yaml
+++ b/sources/config-sans-syriac.yaml
@@ -1,7 +1,7 @@
-familyName: Noto Sans Syriac Estrangela
+familyName: Noto Sans Syriac
 googleFonts: true
 includeSubsets:
 - from: Noto Sans
   name: GF_Latin_Core
 sources:
-- NotoSansSyriac-Estrangela.glyphs
+- NotoSansSyriac.glyphs
