--- a/sources/config-sans-syriac.yaml
+++ b/sources/config-sans-syriac.yaml
@@ -3,5 +3,6 @@ googleFonts: true
 includeSubsets:
 - from: Noto Sans
   name: GF_Latin_Core
+recipeProvider: noto
 sources:
 - NotoSansSyriac.glyphs
